--- a/PrefixSuffixBot/PrefixSuffixBot.csproj
+++ b/PrefixSuffixBot/PrefixSuffixBot.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.9" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
